# avaswarm

./: .env.example  .gitignore  README.md
.scripts/: restart_swarm.ps1
agents/ADL-propale/memory/: 2026-03-03.md  long_term.txt
avaswarm/: .env.example  pyproject.toml
avaswarm/agents/ADL-propale/: agent.md  config.json
avaswarm/agents/ADL-propale/docs/: Tableau_Client_ADL.xlsx
avaswarm/agents/Test-2/: agent.md  config.json
avaswarm/swarm/core/: __init__.py  agent.py  session.py
avaswarm/swarm/gateways/: base.py  cli_gateway.py  web_gateway.py
avaswarm/swarm/providers/: __init__.py  base.py  github_copilot_provider.py  openrouter_provider.py  registry.py  vllm_provider.py
avaswarm/swarm/skills/: __init__.py  base.py  loader.py  registry.py
avaswarm/swarm/tools/: agent_tools.py  file_tools.py  meta_tools.py  registry.py  web_search.py
avaswarm/swarm/utils/: windows_user.py
avaswarm/swarm/web/static/: style.css
avaswarm/swarm/web/templates/: agent_instructions.html  agents.html  base.html  chat.html  config.html  create_agent.html  index.html  memory.html  scheduler.html
swarm/: __init__.py  main.py
swarm/config/: __init__.py  settings.py
swarm/core/: agent.py  session.py
swarm/gateways/: __init__.py  email_gateway.py  web_gateway.py
swarm/memory/: manager.py
swarm/providers/: anthropic_provider.py  base.py  github_copilot_provider.py  openai_provider.py
swarm/scheduler/: __init__.py  cron.py
swarm/tools/: __init__.py  base.py  file_tools.py  memory_tool.py  registry.py  shell_tools.py
swarm/web/: __init__.py
(+7 files in other folders)
